make sure the ticket button is clickable
the footer overlapt the click area of the button
on bigger screens

--- a/ui/divider.module.scss
+++ b/ui/divider.module.scss
@@ -18,7 +18,7 @@
 
   .text {
     position: absolute;
-    max-width: 78vw;
+    max-width: 80vw;
 
     * {
       font-family: var(--font-shrikhand);
